--- a/index.html
+++ b/index.html
@@ -8,8 +8,18 @@
   <title>Slide Curso JavaScript</title>
   <link rel="stylesheet" href="./css/style.css">
 </head>
-
 <body>
+
+  <section class="slide-wrapper">
+    <ul class="slide">
+      <li> <img src="/img/foto1.jpg" alt=""> </li>
+      <li> <img src="/img/foto2.jpg" alt=""> </li>
+      <li> <img src="/img/foto3.jpg" alt=""> </li>
+      <li> <img src="/img/foto4.jpg" alt=""> </li>
+      <li> <img src="/img/foto5.jpg" alt=""> </li>
+      <li> <img src="/img/foto6.jpg" alt=""> </li>
+    </ul>
+  </section>
 
 </body>
 <script type="module" src="./js/script.js"></script>
