--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Slide Curso JavaScript</title>
   <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
 
   <section class="slide-wrapper">
@@ -19,6 +20,11 @@
       <li> <img src="/img/foto5.jpg" alt=""> </li>
       <li> <img src="/img/foto6.jpg" alt=""> </li>
     </ul>
+  </section>
+  <section class="arrow-nav">
+    <button class="prev">Prev</button>
+    <button class="next">Next</button>
+
   </section>
 
 </body>
